--- a/style.css
+++ b/style.css
@@ -168,12 +168,6 @@ p {
 	}
 }
 
-@media (max-width: 992px) {
-	.fencing-content-title.fc-mb-2 {
-		margin-bottom: 10px !important;
-	}
-}
-
 .step-label {
 	font-family: 'League Gothic', sans-serif;
 	font-size: 40px;
